# onnx-transformers

./: .gitignore  pyproject.toml  requirements.txt  setup.py
onnx_transformers/: __init__.py  abstract_model.py  model_for_cross_encoding.py  model_for_encoding.py
onnx_transformers/__spi__/: enums.py  model.py  types.py
onnx_transformers/__util__/: array_util.py  file_util.py
onnx_transformers/tokenizer/: tokenizer.py
onnx_transformers/tokenizer/mixin/: special_tokens_mixin.py
test/: model_for_encoding_test.py
test/dummy/: info.json
