[build-system]
requires = ["poetry-core>=1.0.0", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "onnx-transformers"
version = "1.2.1"
description = "Transformer models using ONNX"
authors = ["c7nw3r", ]

[tool.poetry.dependencies]
python = ">3.10.0"
onnxruntime = "1.22.*"
tokenizers = "0.22.*"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "3.0.0"

[tool.ruff]
target-version = "py312"
select = ["B", "E", "F", "I", "W"]

[tool.ruff.isort]
lines-after-imports = 2
